# Recycler-Baxter

./: .gitignore  Baxter_setup.bash  CMakeLists.txt  Filter contours for grasping  README.md  baxter_setup.bash  can_sort.rosinstall  commands  detected_objects.txt  move_sudo_code  package.xml  requirements.txt  rosdoc.yaml  setup.py
CAD/: Baxter Bottle-Can Gripper Attachment.step
CADs/: Baxter Gripper 72mm diameter.step  Baxter Gripper 72mm diameter.stl  Baxter Gripper 82mm diameter.step  Baxter Gripper 82mm diameter.stl
System_operation/: small_table_raised  test.py  test_vision
config/: sort.yaml
doc/: conf.py  index.rst  manifest.yaml  move_pseudo_code
images/camera_images/11.10.20/: can_top_1.ini
images/camera_images/11.12.20/: head_camera_1.ini
launch/: baxter_move.launch  baxter_move_ML.launch  camera.launch  camera_ML.launch
msg/: Object.msg
nodes/: Mover.py  disp_img  disp_img.py  object_detection.py  recycle  recycle.py  recycle_ML  recycle_ML.py
scripts/: calibrate.py  hough_circle_demo.py  open_cv_segment.py  realsense_demo.py
scripts+pseudocode/: commands
src/can_sort/: calibration.py
srv/: Board.srv  DisplayImage.srv
test/: calibration_testing.test  test_calibration.py
