<?xml version="1.0"?>
<package format="2">
    <name>can_sort</name>
    <version>0.0.0</version>
    <description>ME495 Final Project</description>

    <maintainer email="jketchum@u.northwestern.edu">Jake</maintainer>
    <maintainer email="kaileysmith2021@u.northwestern.edu">Kailey Smith</maintainer>
    <maintainer email="yaelbenshalom2022@u.northwestern.edu">Yael Ben Shalom</maintainer>
    <maintainer email="mingqingyuan2021@u.northwestern.edu">Mingqing Yuan</maintainer>
    <maintainer email="jketchum@u.northwestern.edu">Jake</maintainer>
    <license>MIT</license>

    <!-- Dependenceis needed to build this package -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <!-- Dependencies needed to build against this package --> 
    <build_export_depend>rostest</build_export_depend>
    <build_export_depend>moveit_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>rospy</build_export_depend>

    <!-- Dependencies required at runtime -->
    <exec_depend>rviz</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <test_depend>rostest</test_depend>

</package>

